Fix select help text spacing

--- a/app/assets/stylesheets/honeycrisp/atoms/_form-elements.scss
+++ b/app/assets/stylesheets/honeycrisp/atoms/_form-elements.scss
@@ -26,6 +26,9 @@ label {
   display: block;
   margin-bottom: $s25;
   font-weight: $font-weight-bold;
+  &.has-help {
+    margin-bottom: unset;
+  }
 }
 
 .text-input {
